--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,13 @@
     "require": {
         "php": "^8.0",
         "cloudinary-labs/cloudinary-laravel": "^2.1",
+        "cloudinary/cloudinary_php": "^2.14",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.7",
+        "league/flysystem-aws-s3-v3": "3.0",
         "tcg/voyager": "^1.7"
     },
     "require-dev": {
