--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.0",
         "cloudinary-labs/cloudinary-laravel": "^2.1",
         "cloudinary/cloudinary_php": "^2.14",
+        "firebase/php-jwt": "^6.11",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.0",
